# gredis

./: .gitignore  Makefile  Makefile.in  README-cn.md  README.md  config.h.in  configure.in  gRedis.spec  gredis.spec
examples/: gredis-cluster.cpp
src/: gRedisClient.cpp  gRedisClient.h  gRedisClient_connection.cpp  gRedisClient_hashs.cpp  gRedisClient_keys.cpp  gRedisClient_lists.cpp  gRedisClient_sets.cpp  gRedisClient_sortedsets.cpp  gRedisClient_strings.cpp  gRedisCmd.cpp  gRedisCmd.h  gRedisComm.cpp  gRedisComm.h  gRedisConn.cpp  gRedisConn.h  gRedisGroup.cpp  gRedisGroup.h  gRedisIndex.cpp  gRedisIndex.h  gRedisLock.cpp  gRedisLock.h  gRedisNode.cpp  gRedisNode.h  gRedisPool.cpp  gRedisPool.h  gRedisReply.cpp  gRedisReply.h  gRedisSlice.cpp  gRedisSlice.h  gRedisSlot.cpp  gRedisSlot.h
tests/: gredis-cluster.cpp
